--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-storages==1.13.2
 gunicorn==21.2.0
 jmespath==1.0.1
 oauthlib==3.2.2
-Pillow==10.0.0
+Pillow==10.0.1
 psycopg2==2.9.7
 python3-openid==3.2.0
 pytz==2023.3
@@ -18,3 +18,4 @@ requests-oauthlib==1.3.1
 s3transfer==0.6.2
 sqlparse==0.4.4
 stripe==6.0.0
+urllib3==1.26.16
